--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Argo Order</title>
 </head>
 
 <body>
   <div id="login">
+    <li id="loginList">
+      <ul><div id="username"></div></ul>
+      <ul><div id="password"></div></ul>
+      <ul><div id="submit"></div></ul>
+    </li>
     <script src="login.js"></script>
   </div>
 </body>
